Add Education section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <a href="#" class="logo">SK.</a>
             <div class="nav-links">
                 <a href="#about">About</a>
+                <a href="#education">Education</a>
                 <a href="#skills">Skills</a>
                 <a href="#publications">Publications</a>
                 <a href="#projects">Work</a>
@@ -132,6 +133,38 @@
                             <h3 class="timeline-role">5G Software Engineer (R&D)</h3>
                             <p class="timeline-company">Jio Platforms Limited</p>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Education Section -->
+        <section id="education" class="section">
+            <div class="section-container">
+                <div class="section-header reveal-up">
+                    <h2 class="section-title">Education</h2>
+                    <div class="title-line"></div>
+                </div>
+
+                <div class="experience-timeline reveal-up" style="max-width: 800px; margin: 0 auto;">
+                    <div class="timeline-item">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-date">2024 – 2026</div>
+                        <h3 class="timeline-role">M.S. Robotics Engineering (GPA: 4.0 / 4.0)</h3>
+                        <p class="timeline-company" style="margin-bottom: 0.5rem; color: var(--accent-light, #a0a0a0);">
+                            Worcester Polytechnic Institute (WPI) — Worcester, MA</p>
+                        <p style="font-size: 0.95rem; color: #b0b0b0; line-height: 1.6;"><strong>Awards:</strong> Dr.
+                            Glenn Yee Graduate Student Project Award, EDU Bridge Scholarship<br>
+                            <strong>Coursework:</strong> Computer Vision, Motion Planning, Reinforcement Learning,
+                            Autonomous Aerial Robotics
+                        </p>
+                    </div>
+                    <div class="timeline-item" style="margin-top: 2.5rem;">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-date">2018 – 2022</div>
+                        <h3 class="timeline-role">B.Tech. Electronics and Communication Eng. (GPA: 8.26 / 10)</h3>
+                        <p class="timeline-company" style="color: var(--accent-light, #a0a0a0);">Visvesvaraya National
+                            Institute of Technology (VNIT) — Nagpur, India</p>
                     </div>
                 </div>
             </div>
