--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="#education">Education</a>
                 <a href="#skills">Skills</a>
                 <a href="#publications">Publications</a>
-                <a href="#projects">Work</a>
+                <a href="#projects">Projects</a>
                 <a href="#contact">Contact</a>
             </div>
             <button class="mobile-menu-btn" aria-label="Toggle Menu">
@@ -268,7 +268,7 @@
         <section id="projects" class="section">
             <div class="section-container">
                 <div class="section-header reveal-up">
-                    <h2 class="section-title massive-text">Selected Work.</h2>
+                    <h2 class="section-title massive-text">Projects.</h2>
                     <div class="title-line"></div>
                 </div>
 
