Layout tweaks and resume update

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="#" class="logo">SK.</a>
             <div class="nav-links">
                 <a href="#about">About</a>
-                <a href="#education">Education</a>
+                <a href="#experience">Background</a>
                 <a href="#skills">Skills</a>
                 <a href="#publications">Publications</a>
                 <a href="#projects">Projects</a>
@@ -62,7 +62,7 @@
                             class="social-icon">LinkedIn</a>
                         <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=_ce6oLcAAAAJ"
                             target="_blank" class="social-icon">Google Scholar</a>
-                        <a href="Resume/SHREYAS DEVDATTA KHOBRAGADE.pdf" target="_blank" class="social-icon">Resume</a>
+                        <a href="Resume/Shreyas_Khobragade_Resume.pdf" target="_blank" class="social-icon">Resume</a>
                         <a href="https://pear.wpi.edu" target="_blank" class="social-icon highlight">PeAR Lab</a>
                     </div>
 
@@ -103,130 +103,162 @@
             </a>
         </section>
 
-        <!-- About Section (Brief) -->
+        <!-- About Section -->
         <section id="about" class="section">
             <div class="section-container">
-                <div class="section-header reveal-up">
+                <div class="section-header center reveal-up">
                     <h2 class="section-title">About Me</h2>
                     <div class="title-line"></div>
                 </div>
 
-                <div class="about-content">
-                    <div class="about-text reveal-up">
-                        <p>I am a Robotics and Perception Engineer with a Master's from Worcester Polytechnic Institute.
-                            My passion lies in creating robust autonomy pipelines, particularly for challenging
-                            environments like zero-light and GPS-denied spaces.</p>
-                        <p>I specialize in computer vision, motion planning, and sim-to-real deployment, translating
-                            complex research ideas into reliable systems running on constrained embedded hardware.</p>
-                    </div>
-                    <div class="experience-timeline reveal-up">
-                        <!-- Quick experience highlights -->
-                        <div class="timeline-item">
-                            <div class="timeline-dot"></div>
-                            <div class="timeline-date">2024 - Present</div>
-                            <h3 class="timeline-role">Graduate Researcher</h3>
-                            <p class="timeline-company">PeAR Lab, WPI</p>
-                        </div>
-                        <div class="timeline-item">
-                            <div class="timeline-dot"></div>
-                            <div class="timeline-date">2022 - 2024</div>
-                            <h3 class="timeline-role">5G Software Engineer (R&D)</h3>
-                            <p class="timeline-company">Jio Platforms Limited</p>
-                        </div>
-                    </div>
+                <div class="about-text-center reveal-up"
+                    style="max-width: 900px; margin: 0 auto; text-align: center; font-size: 1.25rem; color: var(--text-secondary); line-height: 1.8;">
+                    <p style="margin-bottom: 1.5rem;">I am a Robotics and Perception Engineer with a Master's from
+                        Worcester Polytechnic Institute. My passion lies in creating robust autonomy pipelines,
+                        particularly for challenging environments like zero-light and GPS-denied spaces.</p>
+                    <p>I specialize in computer vision, deep learning for perception, state estimation, and sim-to-real
+                        deployment. I am driven by translating complex research ideas into reliable systems running on
+                        constrained embedded hardware.</p>
                 </div>
             </div>
         </section>
 
-        <!-- Education Section -->
-        <section id="education" class="section">
+        <!-- Experience & Education Section -->
+        <section id="experience" class="section dark-section">
             <div class="section-container">
-                <div class="section-header reveal-up">
-                    <h2 class="section-title">Education</h2>
-                    <div class="title-line"></div>
-                </div>
+                <div class="dual-column"
+                    style="display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 4rem; align-items: start;">
 
-                <div class="experience-timeline reveal-up" style="max-width: 800px; margin: 0 auto;">
-                    <div class="timeline-item">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-date">2024 – 2026</div>
-                        <h3 class="timeline-role">M.S. Robotics Engineering (GPA: 4.0 / 4.0)</h3>
-                        <p class="timeline-company" style="margin-bottom: 0.5rem; color: var(--accent-light, #a0a0a0);">
-                            Worcester Polytechnic Institute (WPI) — Worcester, MA</p>
-                        <p style="font-size: 0.95rem; color: #b0b0b0; line-height: 1.6;"><strong>Awards:</strong> Dr.
-                            Glenn Yee Graduate Student Project Award, EDU Bridge Scholarship<br>
-                            <strong>Coursework:</strong> Computer Vision, Motion Planning, Reinforcement Learning,
-                            Autonomous Aerial Robotics
-                        </p>
+                    <!-- Experience Column -->
+                    <div class="experience-col">
+                        <div class="section-header reveal-up" style="margin-bottom: 3rem;">
+                            <h2 class="section-title" style="font-size: 2.25rem;">Experience</h2>
+                            <div class="title-line"></div>
+                        </div>
+
+                        <div class="experience-timeline reveal-up">
+                            <div class="timeline-item">
+                                <div class="timeline-dot"></div>
+                                <div class="timeline-date">Jul 2025 - Present</div>
+                                <h3 class="timeline-role">Graduate Researcher</h3>
+                                <p class="timeline-company" style="margin-bottom: 1rem;">PeAR Lab, WPI</p>
+                                <ul style="color: var(--text-tertiary); padding-left: 1.2rem; font-size: 0.95rem;">
+                                    <li style="margin-bottom: 0.5rem;">Designed and implemented a complete sim-to-real
+                                        autonomy pipeline for aerial robots in zero-light and GPS-denied environments.
+                                    </li>
+                                    <li>Trained deep learning models for depth inference achieving real-time performance
+                                        on Jetson Orin Nano.</li>
+                                </ul>
+                            </div>
+                            <div class="timeline-item">
+                                <div class="timeline-dot"></div>
+                                <div class="timeline-date">Jun 2022 - May 2024</div>
+                                <h3 class="timeline-role">5G Software Engineer (R&D)</h3>
+                                <p class="timeline-company" style="margin-bottom: 1rem;">Jio Platforms Limited</p>
+                                <ul style="color: var(--text-tertiary); padding-left: 1.2rem; font-size: 0.95rem;">
+                                    <li style="margin-bottom: 0.5rem;">Developed high-performance C/C++ networking
+                                        software within the VPP framework.</li>
+                                    <li>Implemented shared-memory mechanisms to store statistics, enabling improved
+                                        real-time monitoring and faster debugging.</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
-                    <div class="timeline-item" style="margin-top: 2.5rem;">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-date">2018 – 2022</div>
-                        <h3 class="timeline-role">B.Tech. Electronics and Communication Eng. (GPA: 8.26 / 10)</h3>
-                        <p class="timeline-company" style="color: var(--accent-light, #a0a0a0);">Visvesvaraya National
-                            Institute of Technology (VNIT) — Nagpur, India</p>
+
+                    <!-- Education Column -->
+                    <div class="education-col">
+                        <div class="section-header reveal-up" style="margin-bottom: 3rem;">
+                            <h2 class="section-title" style="font-size: 2.25rem;">Education</h2>
+                            <div class="title-line"></div>
+                        </div>
+
+                        <div class="experience-timeline reveal-up">
+                            <div class="timeline-item">
+                                <div class="timeline-dot"></div>
+                                <div class="timeline-date">2024 – 2026</div>
+                                <h3 class="timeline-role">M.S. Robotics Engineering</h3>
+                                <p class="timeline-company"
+                                    style="margin-bottom: 0.5rem; color: var(--text-secondary);">Worcester Polytechnic
+                                    Institute (WPI) — GPA: 4.0</p>
+                                <p style="font-size: 0.95rem; color: var(--text-tertiary); line-height: 1.6;">
+                                    <strong>Awards:</strong> Dr. Glenn Yee Graduate Student Award<br>
+                                    <strong>Coursework:</strong> Computer Vision, Motion Planning, Reinforcement
+                                    Learning, Autonomous Aerial Robotics
+                                </p>
+                            </div>
+                            <div class="timeline-item" style="margin-top: 2.5rem;">
+                                <div class="timeline-dot"></div>
+                                <div class="timeline-date">2018 – 2022</div>
+                                <h3 class="timeline-role">B.Tech. Electronics & Comm. Eng.</h3>
+                                <p class="timeline-company">Visvesvaraya National Institute of Technology (VNIT) — GPA:
+                                    8.26</p>
+                            </div>
+                        </div>
                     </div>
+
                 </div>
             </div>
         </section>
 
         <!-- Skills Section (Visual, interactive nodes) -->
-        <section id="skills" class="section dark-section">
-            <div class="section-container">
-                <div class="section-header center reveal-up">
+        <section id="skills" class="section dark-section" style="padding: 4rem 0; overflow: hidden;">
+            <div class="section-container" style="max-width: 100%; padding: 0;">
+                <div class="section-header center reveal-up" style="margin-bottom: 2rem;">
                     <h2 class="section-title">Technical Expertise</h2>
                     <p class="section-subtitle">A diverse toolkit for comprehensive robotics development</p>
                 </div>
 
-                <!-- We will implement the stevenf7 style interactive skills layout here -->
-                <div class="skills-showcase reveal-up">
+                <div class="skills-strip-container">
+                    <div class="skills-showcase reveal-up">
 
-                    <div class="skill-category">
-                        <h3>Robotics & Autonomy</h3>
-                        <div class="skill-cloud">
-                            <span class="skill-badge glass" data-hover="ROS2">ROS2</span>
-                            <span class="skill-badge glass" data-hover="Motion Planning">Motion Planning (RRT,
-                                Kinodynamic RRT)</span>
-                            <span class="skill-badge glass" data-hover="Visual-Inertial Odometry">Visual-Inertial
-                                Odometry</span>
-                            <span class="skill-badge glass" data-hover="Reinforcement Learning">Reinforcement Learning
-                                (PPO)</span>
-                            <span class="skill-badge glass" data-hover="Sim-to-Real">Sim-to-Real Deployment</span>
+                        <div class="skill-category">
+                            <h3>Robotics & Autonomy</h3>
+                            <div class="skill-cloud">
+                                <span class="skill-badge glass" data-hover="ROS2">ROS2</span>
+                                <span class="skill-badge glass" data-hover="Motion Planning">Motion Planning (RRT,
+                                    Kinodynamic RRT)</span>
+                                <span class="skill-badge glass" data-hover="Visual-Inertial Odometry">Visual-Inertial
+                                    Odometry</span>
+                                <span class="skill-badge glass" data-hover="Reinforcement Learning">Reinforcement
+                                    Learning
+                                    (PPO)</span>
+                                <span class="skill-badge glass" data-hover="Sim-to-Real">Sim-to-Real Deployment</span>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="skill-category">
-                        <h3>Perception & AI</h3>
-                        <div class="skill-cloud">
-                            <span class="skill-badge glass" data-hover="Computer Vision">Computer Vision</span>
-                            <span class="skill-badge glass" data-hover="OpenCV">OpenCV</span>
-                            <span class="skill-badge glass" data-hover="PyTorch">PyTorch</span>
-                            <span class="skill-badge glass" data-hover="TensorFlow">TensorFlow</span>
-                            <span class="skill-badge glass" data-hover="scikit-learn">scikit-learn</span>
+                        <div class="skill-category">
+                            <h3>Perception & AI</h3>
+                            <div class="skill-cloud">
+                                <span class="skill-badge glass" data-hover="Computer Vision">Computer Vision</span>
+                                <span class="skill-badge glass" data-hover="OpenCV">OpenCV</span>
+                                <span class="skill-badge glass" data-hover="PyTorch">PyTorch</span>
+                                <span class="skill-badge glass" data-hover="TensorFlow">TensorFlow</span>
+                                <span class="skill-badge glass" data-hover="scikit-learn">scikit-learn</span>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="skill-category">
-                        <h3>Programming & Tools</h3>
-                        <div class="skill-cloud">
-                            <span class="skill-badge glass" data-hover="Python">Python</span>
-                            <span class="skill-badge glass" data-hover="C/C++">C/C++</span>
-                            <span class="skill-badge glass" data-hover="Linux">Linux</span>
-                            <span class="skill-badge glass" data-hover="Isaac Sim">Isaac Sim</span>
-                            <span class="skill-badge glass" data-hover="Blender">Blender</span>
+                        <div class="skill-category">
+                            <h3>Programming & Tools</h3>
+                            <div class="skill-cloud">
+                                <span class="skill-badge glass" data-hover="Python">Python</span>
+                                <span class="skill-badge glass" data-hover="C/C++">C/C++</span>
+                                <span class="skill-badge glass" data-hover="Linux">Linux</span>
+                                <span class="skill-badge glass" data-hover="Isaac Sim">Isaac Sim</span>
+                                <span class="skill-badge glass" data-hover="Blender">Blender</span>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="skill-category">
-                        <h3>Hardware Connectivity</h3>
-                        <div class="skill-cloud">
-                            <span class="skill-badge glass" data-hover="Jetson Orin Nano">Jetson Orin Nano</span>
-                            <span class="skill-badge glass" data-hover="Raspberry Pi">Raspberry Pi</span>
-                            <span class="skill-badge glass" data-hover="Pixhawk/PX4">Pixhawk / PX4</span>
-                            <span class="skill-badge glass" data-hover="Microcontrollers">Arduino / ESP32</span>
+                        <div class="skill-category">
+                            <h3>Hardware Connectivity</h3>
+                            <div class="skill-cloud">
+                                <span class="skill-badge glass" data-hover="Jetson Orin Nano">Jetson Orin Nano</span>
+                                <span class="skill-badge glass" data-hover="Raspberry Pi">Raspberry Pi</span>
+                                <span class="skill-badge glass" data-hover="Pixhawk/PX4">Pixhawk / PX4</span>
+                                <span class="skill-badge glass" data-hover="Microcontrollers">Arduino / ESP32</span>
+                            </div>
                         </div>
-                    </div>
 
+                    </div>
                 </div>
             </div>
         </section>
@@ -339,7 +371,7 @@
                     <a href="https://github.com/ShreyasKhobragade/" target="_blank" class="hover-glow">GitHub</a>
                     <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=_ce6oLcAAAAJ"
                         target="_blank" class="hover-glow">Google Scholar</a>
-                    <a href="Resume/SHREYAS DEVDATTA KHOBRAGADE.pdf" target="_blank" class="hover-glow">Resume</a>
+                    <a href="Resume/Shreyas_Khobragade_Resume.pdf" target="_blank" class="hover-glow">Resume</a>
                 </div>
             </div>
 
