Add and layout logos for Experience and Education sections

--- a/index.html
+++ b/index.html
@@ -140,27 +140,48 @@
                             <div class="timeline-item">
                                 <div class="timeline-dot"></div>
                                 <div class="timeline-date">Jul 2025 - Present</div>
-                                <h3 class="timeline-role">Graduate Researcher</h3>
-                                <p class="timeline-company" style="margin-bottom: 1rem;">PeAR Lab, WPI</p>
-                                <ul style="color: var(--text-tertiary); padding-left: 1.2rem; font-size: 0.95rem;">
-                                    <li style="margin-bottom: 0.5rem;">Designed and implemented a complete sim-to-real
-                                        autonomy pipeline for aerial robots in zero-light and GPS-denied environments.
-                                    </li>
-                                    <li>Trained deep learning models for depth inference achieving real-time performance
-                                        on Jetson Orin Nano.</li>
-                                </ul>
+                                <div style="display: flex; justify-content: space-between; align-items: flex-start;">
+                                    <div>
+                                        <h3 class="timeline-role">Graduate Researcher</h3>
+                                        <p class="timeline-company" style="margin-bottom: 1rem;">PeAR Lab, WPI</p>
+                                        <ul
+                                            style="color: var(--text-tertiary); padding-left: 1.2rem; font-size: 0.95rem;">
+                                            <li style="margin-bottom: 0.5rem;">Designed and implemented a complete
+                                                sim-to-real
+                                                autonomy pipeline for aerial robots in zero-light and GPS-denied
+                                                environments.
+                                            </li>
+                                            <li>Trained deep learning models for depth inference achieving real-time
+                                                performance
+                                                on Jetson Orin Nano.</li>
+                                        </ul>
+                                    </div>
+                                    <img src="PeAR_logo.png" alt="PeAR Lab Logo"
+                                        style="width: 160px; height: 160px; margin-left: 1rem; object-fit: contain; flex-shrink: 0;">
+                                </div>
                             </div>
                             <div class="timeline-item">
                                 <div class="timeline-dot"></div>
                                 <div class="timeline-date">Jun 2022 - May 2024</div>
-                                <h3 class="timeline-role">5G Software Engineer (R&D)</h3>
-                                <p class="timeline-company" style="margin-bottom: 1rem;">Jio Platforms Limited</p>
-                                <ul style="color: var(--text-tertiary); padding-left: 1.2rem; font-size: 0.95rem;">
-                                    <li style="margin-bottom: 0.5rem;">Developed high-performance C/C++ networking
-                                        software within the VPP framework.</li>
-                                    <li>Implemented shared-memory mechanisms to store statistics, enabling improved
-                                        real-time monitoring and faster debugging.</li>
-                                </ul>
+                                <div style="display: flex; justify-content: space-between; align-items: flex-start;">
+                                    <div>
+                                        <h3 class="timeline-role">5G Software Engineer (R&D)</h3>
+                                        <p class="timeline-company" style="margin-bottom: 1rem;">Jio Platforms Limited
+                                        </p>
+                                        <ul
+                                            style="color: var(--text-tertiary); padding-left: 1.2rem; font-size: 0.95rem;">
+                                            <li style="margin-bottom: 0.5rem;">Developed high-performance C/C++
+                                                networking
+                                                software within the VPP framework.</li>
+                                            <li>Implemented shared-memory mechanisms to store statistics, enabling
+                                                improved
+                                                real-time monitoring and faster debugging.</li>
+                                        </ul>
+                                    </div>
+                                    <!-- A placeholder class for Jio logo if you have one -->
+                                    <img src="Jio_logo.png" alt="Jio Logo"
+                                        style="width: 160px; height: 160px; margin-left: 1rem; object-fit: contain; flex-shrink: 0;">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -176,22 +197,38 @@
                             <div class="timeline-item">
                                 <div class="timeline-dot"></div>
                                 <div class="timeline-date">2024 – 2026</div>
-                                <h3 class="timeline-role">M.S. Robotics Engineering</h3>
-                                <p class="timeline-company"
-                                    style="margin-bottom: 0.5rem; color: var(--text-secondary);">Worcester Polytechnic
-                                    Institute (WPI) — GPA: 4.0</p>
-                                <p style="font-size: 0.95rem; color: var(--text-tertiary); line-height: 1.6;">
-                                    <strong>Awards:</strong> Dr. Glenn Yee Graduate Student Award<br>
-                                    <strong>Coursework:</strong> Computer Vision, Motion Planning, Reinforcement
-                                    Learning, Autonomous Aerial Robotics
-                                </p>
+                                <div style="display: flex; justify-content: space-between; align-items: flex-start;">
+                                    <div>
+                                        <h3 class="timeline-role" style="margin-bottom: 0.5rem;">M.S. Robotics
+                                            Engineering</h3>
+                                        <p class="timeline-company"
+                                            style="margin-bottom: 0.5rem; color: var(--text-secondary);">
+                                            Worcester Polytechnic Institute (WPI) — GPA: 4.0
+                                        </p>
+                                        <p style="font-size: 0.95rem; color: var(--text-tertiary); line-height: 1.6;">
+                                            <strong>Awards:</strong> Dr. Glenn Yee Graduate Student Award<br>
+                                            <strong>Coursework:</strong> Computer Vision, Motion Planning, Reinforcement
+                                            Learning, Autonomous Aerial Robotics
+                                        </p>
+                                    </div>
+                                    <img src="WPI_logo.png" alt="WPI Logo"
+                                        style="width: 160px; height: 160px; margin-left: 1rem; object-fit: contain; flex-shrink: 0;">
+                                </div>
                             </div>
                             <div class="timeline-item" style="margin-top: 2.5rem;">
                                 <div class="timeline-dot"></div>
                                 <div class="timeline-date">2018 – 2022</div>
-                                <h3 class="timeline-role">B.Tech. Electronics & Comm. Eng.</h3>
-                                <p class="timeline-company">Visvesvaraya National Institute of Technology (VNIT) — GPA:
-                                    8.26</p>
+                                <div style="display: flex; justify-content: space-between; align-items: flex-start;">
+                                    <div>
+                                        <h3 class="timeline-role" style="margin-bottom: 0.5rem;">B.Tech. Electronics &
+                                            Comm. Eng.</h3>
+                                        <p class="timeline-company" style="margin-bottom: 0;">
+                                            Visvesvaraya National Institute of Technology (VNIT) — GPA: 8.26
+                                        </p>
+                                    </div>
+                                    <img src="VNIT_logo.png" alt="VNIT Logo"
+                                        style="width: 160px; height: 160px; margin-left: 1rem; object-fit: contain; flex-shrink: 0;">
+                                </div>
                             </div>
                         </div>
                     </div>
